--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="sv">
 <head>
 <meta charset="utf-8" />
@@ -10,76 +11,83 @@
     --fs-title: 3rem;
     --fs-subtitle: 1.4rem;
 
-    --bar-h: 56px;
-    --bar-radius: 16px;
-    --bar-bg: #2a2a2a;
-    --bar-fill: #ffffff;
-  }
+```
+--bar-h: 56px;
+--bar-radius: 16px;
+--bar-bg: #2a2a2a;
+--bar-fill: #ffffff;
+```
 
-  html,body{
-    height:100%; margin:0;
-    background:#000; color:#fff; overflow:hidden;
-    -webkit-text-size-adjust:100%; text-size-adjust:100%;
-  }
-  body.danger{ background:#A5402D; }
+}
 
-  /* === SCEN (1280×800 som skalas via JS) === */
-  #stage{
-    position:absolute; left:0; top:0;
-    width:1280px; height:800px;
-    box-sizing:border-box; padding:20px;
-    display:grid; grid-template-rows:auto auto 1fr auto; gap:12px;
-    transform-origin:0 0; will-change:transform; backface-visibility:hidden;
-  }
+html,body{
+height:100%; margin:0;
+background:#000; color:#fff; overflow:hidden;
+-webkit-text-size-adjust:100%; text-size-adjust:100%;
+}
+body.danger{ background:#A5402D; }
 
-  .title{ text-align:center; font-weight:800; letter-spacing:.3px; opacity:.98; font-size:var(--fs-title); }
-  .subtitle{ text-align:center; font-weight:700; opacity:.95; font-size:var(--fs-subtitle); }
-  .time{ display:grid; place-items:center; text-align:center; font-weight:900; line-height:1; letter-spacing:.4px; font-size:var(--fs-time); white-space:nowrap; margin-bottom:8px; }
+/* === SCEN (1280×800 som skalas via JS) === */
+#stage{
+position:absolute; left:0; top:0;
+width:1280px; height:800px;
+box-sizing:border-box; padding:20px;
+display:grid; grid-template-rows:auto auto 1fr auto; gap:12px;
+transform-origin:0 0; will-change:transform; backface-visibility:hidden;
+}
 
-  .track{ position:relative; margin:0 auto; padding:0; width:900px; }
-  .bar{ position:relative; height:var(--bar-h); background:var(--bar-bg); border-radius:var(--bar-radius); overflow:hidden; box-shadow: inset 0 0 0 1px rgba(255,255,255,.06); }
-  .fill{ position:absolute; left:0; top:0; bottom:0; height:100%; width:0%; background:var(--bar-fill); border-radius:inherit; transform:translateZ(0); }
+.title{ text-align:center; font-weight:800; letter-spacing:.3px; opacity:.98; font-size:var(–fs-title); }
+.subtitle{ text-align:center; font-weight:700; opacity:.95; font-size:var(–fs-subtitle); }
+.time{ display:grid; place-items:center; text-align:center; font-weight:900; line-height:1; letter-spacing:.4px; font-size:var(–fs-time); white-space:nowrap; margin-bottom:8px; }
 
-  .ticks{ position:relative; height:52px; }
-  .tick{ position:absolute; top:0; transform:translateX(-50%); text-align:center; }
-  .tick i{ display:block; width:3px; height:24px; background:rgba(255,255,255,.95); margin:0 auto 6px; border-radius:2px; }
-  .tick span{ font-size:1.15rem; opacity:.98; font-weight:700; }
-  .tick.end i{ width:4px; height:28px; background:#fff; }
-  .tick.end span{ font-weight:900; }
+.track{ position:relative; margin:0 auto; padding:0; width:900px; }
+.bar{ position:relative; height:var(–bar-h); background:var(–bar-bg); border-radius:var(–bar-radius); overflow:hidden; box-shadow: inset 0 0 0 1px rgba(255,255,255,.06); }
+.fill{ position:absolute; left:0; top:0; bottom:0; height:100%; width:0%; background:var(–bar-fill); border-radius:inherit; transform:translateZ(0); }
 
-  .fab{
-    position:absolute; right:16px; top:16px; width:64px; height:64px; z-index:10;
-    border-radius:999px; display:grid; place-items:center;
-    background:#151515; color:#fff; border:1px solid #2a2a2a; font-size:20px; user-select:none; cursor:pointer; touch-action:manipulation;
-    box-shadow: 0 8px 24px rgba(0,0,0,.4);
-  }
+.ticks{ position:relative; height:52px; }
+.tick{ position:absolute; top:0; transform:translateX(-50%); text-align:center; }
+.tick i{ display:block; width:3px; height:24px; background:rgba(255,255,255,.95); margin:0 auto 6px; border-radius:2px; }
+.tick span{ font-size:1.15rem; opacity:.98; font-weight:700; }
+.tick.end i{ width:4px; height:28px; background:#fff; }
+.tick.end span{ font-weight:900; }
 
-  /* === INSTÄLLNINGAR – utanför skalad scen (fix för input-bugg) === */
-  .settings{
-    position:fixed; inset:0; background:rgba(0,0,0,.94);
-    border:none; padding:20px; display:none; overflow:auto; z-index:9999;
-  }
-  .settings h2{margin:.2em 0 .6em; font-size:1.375rem;}
-  .row{display:grid; grid-template-columns:1.2fr 1fr 1fr auto; gap:10px; align-items:center; margin:.5em 0;}
-  .row input{ padding:.8em .9em; border-radius:12px; border:1px solid #2a2a2a; background:#0d0d0d; color:#fff; font-size:1rem;}
-  .settings .actions{display:flex; gap:12px; margin-top:10px; flex-wrap:wrap;}
-  .settings button{ padding:.9em 1.1em; min-height:48px; border-radius:12px; border:1px solid #2a2a2a; background:#101010; color:#fff; font-weight:700; cursor:pointer; font-size:1rem;}
-  .note{opacity:.7; font-size:.9rem; margin-top:.6rem;}
+.fab{
+position:absolute; right:16px; top:16px; width:64px; height:64px; z-index:10;
+border-radius:999px; display:grid; place-items:center;
+background:#151515; color:#fff; border:1px solid #2a2a2a; font-size:20px; user-select:none; cursor:pointer; touch-action:manipulation;
+box-shadow: 0 8px 24px rgba(0,0,0,.4);
+}
+
+/* === INSTÄLLNINGAR – utanför skalad scen (fix för input-bugg) === */
+.settings{
+position:fixed; inset:0; background:rgba(0,0,0,.94);
+border:none; padding:20px; display:none; overflow:auto; z-index:9999;
+}
+.settings h2{margin:.2em 0 .6em; font-size:1.375rem;}
+.row{display:grid; grid-template-columns:1.2fr 1fr 1fr auto; gap:10px; align-items:center; margin:.5em 0;}
+.row input{ padding:.8em .9em; border-radius:12px; border:1px solid #2a2a2a; background:#0d0d0d; color:#fff; font-size:1rem;}
+.settings .actions{display:flex; gap:12px; margin-top:10px; flex-wrap:wrap;}
+.settings button{ padding:.9em 1.1em; min-height:48px; border-radius:12px; border:1px solid #2a2a2a; background:#101010; color:#fff; font-weight:700; cursor:pointer; font-size:1rem;}
+.note{opacity:.7; font-size:.9rem; margin-top:.6rem;}
 </style>
+
 </head>
 <body>
   <div id="stage">
     <div class="title" id="title">Tid kvar</div>
     <div class="subtitle" id="subtitle">–</div>
 
-    <div class="time" id="time">--</div>
+```
+<div class="time" id="time">--</div>
 
-    <div class="track" id="track">
-      <div class="bar" id="bar"><div class="fill" id="fill"></div></div>
-      <div class="ticks" id="ticks"></div>
-    </div>
+<div class="track" id="track">
+  <div class="bar" id="bar"><div class="fill" id="fill"></div></div>
+  <div class="ticks" id="ticks"></div>
+</div>
 
-    <div class="fab" id="openSettings" aria-label="Inställningar">⚙︎</div>
+<div class="fab" id="openSettings" aria-label="Inställningar">⚙︎</div>
+```
+
   </div>
 
   <div class="settings" id="settings" aria-modal="true" role="dialog">
@@ -317,15 +325,18 @@ function saveRows(){
     if (typeof timeInputs[i].blur === 'function') timeInputs[i].blur();
   }
 
-  var rowEls=[].slice.call(document.querySelectorAll('.row'));
-  var arr = rowEls.map(function(r){
-    var ins=[].slice.call(r.querySelectorAll('input'));
-    var name=ins[0].value;
-    var start=normalizeTime(ins[1].value);
-    var end  =normalizeTime(ins[2].value);
-    return { name: name||'Period', start: start, end: end };
-  });
-  setPeriods(arr); renderRows(); openSettings(false);
+  /* Ge webbläsaren tid att committa värdena */
+  setTimeout(function(){
+    var rowEls=[].slice.call(document.querySelectorAll('.row'));
+    var arr = rowEls.map(function(r){
+      var ins=[].slice.call(r.querySelectorAll('input'));
+      var name=ins[0].value;
+      var start=normalizeTime(ins[1].value);
+      var end  =normalizeTime(ins[2].value);
+      return { name: name||'Period', start: start, end: end };
+    });
+    setPeriods(arr); renderRows(); openSettings(false);
+  }, 50);
 }
 
 /* Öppna via knapp */
@@ -371,5 +382,6 @@ applyScale();
 (function sizeTrack(){ sizeTrackToTime(); requestAnimationFrame(sizeTrack); })();
 loop();
 </script>
+
 </body>
 </html>
